<resources>
    <string name="app_name">TieGen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="confirm_password"> Confirm Password </string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_mismatch_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_duplicate_username">User name exists!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_side_nav">sideNav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--<string name="app_name">Project Unit2</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <string name="Food_label">Food</string>
    <string name="Health_label">Health</string>
    <string name="Housekeeping_label">House keeping</string>
    <string name="title_activity_service_listing">ServiceListingActivity</string>
    <string name="title_activity_view_calendar">ViewCalendarActivity</string>
    <string name="title_activity_book_mark">BookMarkActivity</string>

    <string name="title_activity_service_detail">ServiceDetailActivity</string>
    <string name="btn_schedule">Schedule</string>
    <string-array name="timing_array">
        <item>09:30</item>
        <item>11:30</item>
        <item>13:30</item>
        <item>15:30</item>
        <item>17:30</item>
        <item>19:30</item>
    </string-array>
    <string-array name="frequency_array">
        <item>daily</item>
        <item>weekly</item>
        <item>bi-weekly</item>
        <item>monthly</item>
    </string-array>
    <string name="title_activity_login2">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="back_to_login">Back to login</string>
    <string name="title_activity_error_message">ErrorMessageActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
