<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.DashboardActivity"
    tools:showIn="@layout/activity_dashboard">

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/Food_label"
        android:id="@+id/food_button"
        android:drawableLeft="@drawable/ic_food"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/Health_label"
        android:id="@+id/health_button"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_health"
        android:layout_below="@+id/food_button"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/Housekeeping_label"
        android:id="@+id/housekeeping_button"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_housekeeping"
        android:layout_below="@+id/health_button"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
